# VeriLearn

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  temp_ingestion.py  test.py
core/: config.yaml  config_loader.py  logger.py  path_constants.py
docs/: mkdocs.yml
docs/docs/: index.md
ingestion/: chunker.py
output/chunks/: biology_class11_part1_chunks.txt
verilearn/: __init__.py  dataset.py  features.py  plots.py
verilearn/modeling/: predict.py  train.py
