[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "verilearn"
version = "0.0.1"
description = "An EdTech-focused RAG system that retrieves answers strictly from textbooks using a fine-tuned embedding model, hybrid search, and reranking. It delivers accurate, syllabus-aligned responses with exact source citations and self-evaluates to reduce hallucinations."
authors = [
  { name = "Aryan Shah" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "==3.12.10"


[tool.ruff]
line-length = 99
src = ["verilearn"]
include = ["pyproject.toml", "verilearn/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["verilearn"]
force-sort-within-sections = true

